fix image gap

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -25,7 +25,7 @@
 /* @import must be at top of file, otherwise CSS will not work */
 @import url("//hello.myfonts.net/count/386a46");
   
-@font-face {font-family: 'FFMarkWebProRegular';src: url('webfonts/386A46_0_0.eot');src: url('webfonts/386A46_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/386A46_0_0.woff2') format('woff2'),url('webfonts/386A46_0_0.woff') format('woff'),url('webfonts/386A46_0_0.ttf') format('truetype');}
+@font-face {font-family: 'FFMarkWebProRegular';src: url('../webfonts/386A46_0_0.eot');src: url('../webfonts/386A46_0_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/386A46_0_0.woff2') format('woff2'),url('../webfonts/386A46_0_0.woff') format('woff'),url('../ebfonts/386A46_0_0.ttf') format('truetype');}
  
  /*END WEBFONTS*/
 
