--- a/src/assets/scss/global/_layout.scss
+++ b/src/assets/scss/global/_layout.scss
@@ -89,6 +89,8 @@ h6, .h6 {
   background-image: url(../img/estuary-background-crab_cake-gradient-1920px.jpg);
   background-position: top;
   background-size: cover;
+  padding-top: 2px;
+  margin-top: -2px;
 }
 
 /*==============================
